# Calorie_Clash

./: .gitignore  AGENTS.md  GEMINI.md  TODO.md  changelog.md  license.md  pyproject.toml  readme.md
.github/workflows/: project-automation.yml
docs/: architecture.md  calorie_clash_mvp_gui.md  changelog.md  contributing.md  dev_guide_python.md  game_rules.md  mampuku_janken_gui_plan.md  mampuku_janken_requirements.md  wednesday_downtown.md
src/calorie_clash/: __main__.py
src/calorie_clash/cli/: console.py  loop.py  main.py  title.py  ui.py  wizard.py
src/calorie_clash/core/: data.py  engine.py  game.py  types.py
src/calorie_clash/crypto/: commit.py
